; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-ffmpeg/extr_obs-ffmpeg-source.c_preload_frame.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-ffmpeg/extr_obs-ffmpeg-source.c_preload_frame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_source_frame = type { i32 }
%struct.ffmpeg_source = type { i32, i64, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.obs_source_frame*)* @preload_frame to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @preload_frame(i8* %0, %struct.obs_source_frame* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.obs_source_frame*, align 8
  %5 = alloca %struct.ffmpeg_source*, align 8
  store i8* %0, i8** %3, align 8
  store %struct.obs_source_frame* %1, %struct.obs_source_frame** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.ffmpeg_source*
  store %struct.ffmpeg_source* %7, %struct.ffmpeg_source** %5, align 8
  %8 = load %struct.ffmpeg_source*, %struct.ffmpeg_source** %5, align 8
  %9 = getelementptr inbounds %struct.ffmpeg_source, %struct.ffmpeg_source* %8, i32 0, i32 3
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  br label %29

13:                                               ; preds = %2
  %14 = load %struct.ffmpeg_source*, %struct.ffmpeg_source** %5, align 8
  %15 = getelementptr inbounds %struct.ffmpeg_source, %struct.ffmpeg_source* %14, i32 0, i32 2
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %23, label %18

18:                                               ; preds = %13
  %19 = load %struct.ffmpeg_source*, %struct.ffmpeg_source** %5, align 8
  %20 = getelementptr inbounds %struct.ffmpeg_source, %struct.ffmpeg_source* %19, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %29

23:                                               ; preds = %18, %13
  %24 = load %struct.ffmpeg_source*, %struct.ffmpeg_source** %5, align 8
  %25 = getelementptr inbounds %struct.ffmpeg_source, %struct.ffmpeg_source* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = load %struct.obs_source_frame*, %struct.obs_source_frame** %4, align 8
  %28 = call i32 @obs_source_preload_video(i32 %26, %struct.obs_source_frame* %27)
  br label %29

29:                                               ; preds = %12, %23, %18
  ret void
}

declare dso_local i32 @obs_source_preload_video(i32, %struct.obs_source_frame*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
